fix(megamenu): remove overflow styles on animation to fix shifting

--- a/packages/styles/scss/components/masthead/_masthead-megamenu.scss
+++ b/packages/styles/scss/components/masthead/_masthead-megamenu.scss
@@ -20,12 +20,10 @@
 
   @keyframes collapse {
     0% {
-      overflow-y: auto;
       max-height: 100vh;
     }
     100% {
       max-height: 0;
-      overflow-y: hidden;
     }
   }
 
